# request-file

./: .gitignore  LICENSE  Makefile  pyproject.toml
docs/: schema.json
src/request_file/: export.py  files.py  format.py  history.py  main.py  model.py
tests/: conftest.py  test_bash_completer.py  test_files.py  test_main.py
tests/fixtures/: needs_body_value.json  needs_method.json  needs_param.json  needs_param_in_url.json  needs_url.json  optional_param.json
