[tool.poetry]
name = "request-file"
version = "0.1.0"
description = ""
authors = ["Ashleigh Udoh <ash@audoh.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pydantic = "^1.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
