[tool.poetry]
name = "request-file"
version = "0.1.0"
description = ""
authors = ["Ashleigh Udoh <ash@audoh.co.uk>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
pydantic = "^1.8.1"
appdirs = "^1.4.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.2.2"
pytest-testdox = "^2.0.1"
Nuitka = "^0.6.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
